Updated to the latest packages.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: willopuslists
-description: A new Flutter project.
+description: A simple task/shopping list Flutter project.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
@@ -11,12 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cached_network_image: ^3.3.1
-  cupertino_icons: ^1.0.2
-  http: ^1.1.0
+  cached_network_image: ^3.4.1
+  cupertino_icons: ^1.0.8
+  http: ^1.2.2
   reorderables: ^0.6.0
-  shared_preferences: ^2.2.2
-  uuid: ^4.3.3
+  shared_preferences: ^2.3.3
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +28,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
